pandora_console/include/styles/pandora.css
/* ... */
/*
 * LOAD_ENTERPRISE.PHP
 */
#code_license_dialog {
  padding: 50px;
  padding-top: 10px;
}
#code_license_dialog #logo {
  margin-bottom: 20px;
  text-align: center;
}
#code_license_dialog,
#code_license_dialog * {
  font-size: 14px;
}
#code_license_dialog ul {
  padding-left: 30px;
  list-style-image: url("../../images/input_tick.png");
}
#code_license_dialog li {
  margin-bottom: 12px;
}

#code_license_dialog #code {
  font-weight: bolder;
  font-size: 20px;
  border: 1px solid #dddddd;
  padding: 5px;
  text-align: center;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
}

#code_license_dialog a {
  text-decoration: underline;
}

/* GRAPHS CSS */

.parent_graph {
  position: relative;
  margin: 0 auto;
}

.menu_graph,
.timestamp_graph {
  position: absolute;
}

.menu_graph {
  width: 30px;
  height: 150px;
  left: 100%;
  position: absolute;
  top: 0px;
  background-color: transparent;
  -moz-border-top-right-radius: 6px;
  -webkit-border-top-right-radius: 6px;
  border-top-right-radius: 6px;
  -moz-border-top-left-radius: 6px;
  -webkit-border-top-left-radius: 6px;
  border-top-left-radius: 6px;
}

.legend_graph {
  margin: 0px;
  padding: 0px;
  text-align: left;
}

.legendColorBox * {
  font-size: 0px;
  padding: 0px 4px;
  overflow: visible;
}

/* GIS CSS */

.olLayerDiv {
  z-index: 102;
}

/* Alert view */

table.alert_days th,
table.alert_time th {
  height: 30px;
  vertical-align: middle;
}

table.alert_escalation th img {
  width: 18px;
}

td.used_field {
  background: #6eb432;
  color: #ffffff;
  font-weight: bold;
}

td.overrided_field {
  color: #666;
}

td.unused_field {
  color: #888;
}

td.empty_field {
  background: url("../../images/long_arrow.png") no-repeat 100% center;
}

#table_macros textarea {
  width: 96%;
}

/* Policies styles */

table#policy_modules td * {
  display: inline;
}

.context_help_title {
  font-weight: bolder;
  text-align: left;
}
.context_help_body {
  text-align: left;
}

#left_column_logon_ok {
  width: 750px;
  float: left;
}

#news_board {
  min-width: 530px;
  width: 100%;
}

#right_column_logon_ok {
  width: 350px;
  float: right;
  margin-right: 20px;
}

#clippy_head_title {
  font-weight: bold;
  background: #82b92e;
  color: #ffffff;
  margin-top: -15px;
  margin-left: -15px;
  margin-right: -15px;
  padding: 5px;
  margin-bottom: 10px;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

#dialog-double_auth-container {
  width: 100%;
  text-align: center;
  vertical-align: middle;
}

/*.saml_button {
	float: left;
	position: fixed;
	vertical-align: middle;
}*/

/*
 * ---------------------------------------------------------------------
 * - TACTICAL VIEW y TABLAS	 													-
 * ---------------------------------------------------------------------
 */
.status_tactical {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  background-color: #fff;
  padding: 10px;
  border: 1px solid #e2e2e2;
  margin-top: 5%;
  text-align: left;
}

.status_tactical img {
  border: 3px solid #000;
  border-radius: 100px;
}

#sumary {
  color: #fff;
  margin: 2px;
  padding: 10px 30px;
  font-size: 16px;
  font-family: "lato-bolder", "Open Sans", sans-serif;
  font-weight: bold;
  border-radius: 2px;
}

div.sumary_div {
  color: #fff;
  font-size: 20px;
  font-weight: bold;
  border-radius: 2px;
  width: 120px;
  height: 40px;
  text-align: center;
  display: table-cell;
  vertical-align: middle;
}

div.div_groups_status {
  width: 350px;
  background-color: white;
  border: 1px solid #ececec;
  border-radius: 5px;
  margin: 20px;
  float: left;
}

.databox.data > tbody > tr > td {
  border-bottom: 1px solid #e2e2e2;
}

.databox .search {
  margin-top: 0px;
}

.databox.data > tbody > tr > td.progress_bar img {
  border: 3px solid #000;
  border-radius: 100px;
}

.databox.pies {
  border: none;
}

.databox.pies fieldset.tactical_set {
  width: 100%;
  min-height: 285px;
}

.difference {
  border-left-width: 2px;
  border-left-style: solid;
  border-right-width: 2px;
  border-right-style: solid;
  border-color: #e2e2e2;
}

#title_menu {
  color: #b9b9b9;
  float: right;
  width: 72%;
  letter-spacing: 0pt;
  font-size: 10pt;
  white-space: pre-wrap;
  padding-top: 0;
  font-family: "Open Sans", sans-serif;
}

.no_hidden_menu {
  background-position: 11% 50%;
}

#menu_tab li.nomn,
#menu_tab li.nomn_high {
  padding-right: 8px;
  padding-left: 8px;
  font-weight: bold;
  text-decoration: none;
  font-size: 14px;
  margin-top: 0;
  min-width: 30px;
  min-height: 50px;
  max-height: 53px;
}

#menu_tab_frame_view_bc #menu_tab li.nomn,
#menu_tab_frame_view_bc #menu_tab li.nomn_high {
  min-height: 53px;
}

#menu_tab li:hover {
  box-shadow: inset 0px 4px #82b92e;
}

#menu_tab li.nomn_high,
#menu_tab li.nomn_high span {
  color: #fff;
  box-shadow: inset 0px 4px #82b92e;
  background-color: #fff;
}

#menu_tab li.nomn img,
#menu_tab li img {
  margin-top: 10px;
  margin-left: 3px;
}
#menu_tab li.nomn.tab_operation img,
#menu_tab li.nomn.tab_godmode img,
#menu_tab li.nomn_high.tab_operation img,
#menu_tab li.nomn_high.tab_godmode img {
  margin: 10px auto;
}

#menu_tab li.tab_operation a,
#menu_tab a.tab_operation {
  background: none;
}

.agents_modules_table {
  border: 1px solid #e2e2e2;
  border-spacing: 0px;
}
.agents_modules_table td {
  border: 1px solid #e2e2e2;
}

.dashboard {
  top: 23px;
}

.dashboard li a {
  width: 158px;
}

.text_subDashboard {
  float: left;
  margin-top: 5%;
  margin-left: 3%;
}

.title_um {
  font-family: sans-serif;
  font-size: 20px;
  color: #82b92e;
  text-align: center;
}

.text_um {
  font-family: sans-serif;
  font-size: 16px;
  padding-left: 80px;
}

/* The items with the class 'spinner' will rotate */
/* Not supported on IE9 and below */
.spinner {
  -webkit-animation: spinner 2s infinite linear;
  animation: spinner 2s infinite linear;
}
/* ... */

